--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+server.port=8443
+# The format used for the keystore. It could be set to JKS in case it is a JKS file.
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate.
+server.ssl.key-store=classpath:keystore/moc.p12
+# The password used to generate the certificate.
+server.ssl.key-store-password=123456
+# The alias mapped to the certificate.
+server.ssl.key-alias=moc
+# Only accept https requests.
+server.ssl.enabled=true
